[package]
name = "protocoll"
version = "0.3.1"
authors = ["ysmiraak <ysmiraak@gmail.com>"]
description = "clojure inspired protocols for rust collections."
documentation = "https://ysmiraak.github.io/protocoll"
homepage = "https://crates.io/crates/protocoll"
repository = "https://github.com/ysmiraak/protocoll"
readme = "README.md"
keywords = ["clojure","protocol","collection"]
license = "MIT"
include = ["src/**/*","Cargo.toml"]